# mussia-manager

./: .npmrc  .pypirc  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yaml  justfile  nx.json  package.json  pnpm-lock.yaml  pyproject.toml
apps/cli/tui1/: Cargo.toml  project.json
apps/cli/tui1/src/: app.rs  main.rs
apps/python/adk/adk-test1/: agent.py  instruction1.txt  main.py  my_knowledge.txt  util.py
apps/python/agent1/: README.md  main.py  project.json  pyproject.toml
apps/python/agent1/src/: chains.py
apps/python/agent2/: chains.py  main.py  pyproject.toml  schemas.py
apps/python/langgraph/cli/memory/src/memory_agent/: graph.py
apps/python/langgraph/cli/react/: langgraph.json  project.json  pyproject.toml
apps/python/langgraph/cli/react/src/react_agent/: __init__.py  configuration.py  graph.py  memory.py  tools.py
apps/python/langgraph/module0/: main.py  pyproject.toml
apps/python/langgraph/module1/: agent-memory.py  agent.py  chain.py  pyproject.toml  router.py  simple-graph.py
apps/python/langgraph/module2/: chatbot-summarization.py  main.py  multiple-schemas.py  pyproject.toml  state-reducers.py  state-schema.py  trim-filter-messages.py
apps/python/langgraph/module3/: main.py  pyproject.toml  time-travel.py
apps/python/langgraph/module4/: main.py  parallelization.py  pyproject.toml  sub-graph.py
apps/python/scraper/: pyproject.toml
libs/python/: myscriptd.py
libs/python/lib1/: __init__.py  main.py  pyproject.toml
libs/python/lib2/: main.py  pyproject.toml
libs/python/mylibrary/: pyproject.toml
libs/python/mylibrary/src/mylibrary/: __init__.py
libs/shared/core/: Cargo.toml  project.json
libs/shared/mongo_service/: Cargo.toml  project.json
libs/shared/proc_macros/: Cargo.toml  project.json
manifests/ci/: main.yaml  repo.yaml
manifests/ci/tekton/repo1/: cluster-task.yaml  pipeline-run.yaml  pipeline.yaml  pvc.yaml
