# monorepo repo example of uv
# https://github.com/JasperHG90/uv-monorepo/blob/main/pyproject.toml
[project]
name = "mussia-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.12",
]

[dependency-groups]
dev = [
    "langgraph-api>=0.2.20",
    "langgraph-cli>=0.2.10",
    "ruff>=0.11.4",
]

#[tool.hatch.build.targets.wheel]
#packages = ["agent1"]

[tool.uv.workspace]
members = [
  "apps/python/agent1",
  "apps/python/agent2",
  "apps/python/scraper",
  "libs/python/lib1",
  "libs/python/lib2",
  "libs/python/mylibrary",
  "apps/python/agent3",
  "apps/python/langgraph/module0",
  "apps/python/langgraph/module1",
  "apps/python/langgraph/module2",
  "apps/python/langgraph/module3",
  "apps/python/langgraph/module4",
  "apps/python/langgraph/cli/react"
]

#[tool.uv.sources]
#lib1 = { workspace = true }

#[tool.hatch.build.targets.wheel]
#packages = ["agent1", "agent2", "scraper", "lib1", "lib2", "mylibrary"] #tool.uv.workspace

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E", "W"]


#uvx ruff check ./apps/python/agent1/
#uv pip install .
