[package]
name = "cli_tui1"
version = "0.1.0"
edition = "2021"


[dependencies]
crossterm = { version = "0.29", features = ["default"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
eyre = { version = "0.6", features = ["default"] }
color-eyre = {version = "0.6", features = ["default"]}
tokio = { version = "1.44", features = ["full", "process"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
