[project]
name = "agent1"
version = "0.1.0"
authors = [
  { name="Yuri Krupnik" },
]
description = "Agent1 application using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain-core",
    "langgraph",
]

[tool.uv.sources]
mylibrary = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]
