[project]
name = "module0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "python-dotenv",
    "mylibrary>=0.1.0",
]

[tool.uv.sources]
mylibrary = { workspace = true }
