[project]
name = "module2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "langchain-core>=0.3.56",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "langgraph-prebuilt>=0.1.8",
    "mylibrary",
    "ollama>=0.4.8",
]

[tool.uv.sources]
mylibrary = { workspace = true }
